crates/core/tests/compile_fail/engine_private_fields.stderr
error[E0616]: field `agents` of struct `converge_core::Engine` is private
 --> tests/compile_fail/engine_private_fields.rs:9:26
  |
9 |     let _agents = engine.agents;
  |                          ^^^^^^ private field
